<resources>
    <string name="app_name">Budget Bliss</string>
    <string name="title_activity_registration">Registration</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="contact_number">Contact number</string>
    <string name="register">Register</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="income_heading">Income</string>
    <string name="expenses_heading">Expenses</string>
    <string name="expense">Expense</string>
    <string name="balance_heading">Balance</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_add_transaction_category">AddTransactionCategoryActivity</string>
    <string name="amount">Amount*</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="category_name">Category name</string>
    <string name="add_category">Add category</string>
    <string name="add">Add</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="save">Save</string>
    <string name="add_new">New category</string>
    <string name="left_selector_to_decrement_value">left selector to decrement value</string>
    <string name="right_selector_to_increment_value">right selector to increment value</string>
    <string name="category">Category</string>
    <string name="edit">edit</string>
    <string name="delete">delete</string>
    <string name="transaction">Transaction</string>
    <string name="no_recorded_transactions">No recorded transactions</string>
    <string name="negative_expense">-%s</string>
    <string name="amount_error">Cannot be empty</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="are_you_sure_you_want_to_delete_this_transaction">Are you sure you want to delete this transaction permanently</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="title_activity_report">ReportActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="today">today</string>
</resources>
